--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -8,7 +8,7 @@ components:
     wrap_on: never, col_spacing: medium, spacing_above: none, col_widths: '{}', spacing_below: none,
     background: ''}
   name: filterpanel
-  layout_properties: {slot: filterpanel}
+  layout_properties: {slot: filter-panel}
   components:
   - type: GridPanel
     properties: {spacing_above: small, spacing_below: none, background: '', foreground: '',
@@ -292,7 +292,7 @@ components:
         border: ''
         enabled: true
         foreground: ''
-        items: ['1']
+        items: ['']
         visible: true
         font_size: 12
         font: ''
@@ -309,7 +309,7 @@ components:
         row: PKQKNH
         width_xs: 2
         col_xs: 3
-        width: 160.312
+        width: 122.828
       event_bindings: {change: filter_change}
       name: dd_completion_code
       data_bindings:
@@ -356,8 +356,7 @@ components:
         col_xs: 1
         width: 66.6562
       data_bindings:
-      - {code: self.esc_type, property: items}
-      - {code: 'self.filters[''esc_type'']', writeback: true, property: selected_value}
+      - {code: self.etype, property: items}
       event_bindings: {change: filter_change}
       name: dd_esc_type
     - type: Button
