--- a/client_code/Homepage/RowTemplate1/form_template.yaml
+++ b/client_code/Homepage/RowTemplate1/form_template.yaml
@@ -21,39 +21,61 @@ components:
       spacing_below: small, background: '', horizontal_align: center}
     name: image_1
     layout_properties: {grid_position: 'RFPMOC,OYYRAS'}
-- type: Label
-  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: '', font_size: 14, font: '', spacing_above: small, icon_align: left, spacing_below: small,
+- type: Link
+  properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+    visible: true, text: '', font_size: null, wrap_on: never, font: '', col_spacing: none,
+    spacing_above: none, icon_align: left, col_widths: '{}', spacing_below: none,
     italic: false, background: '', bold: false, underline: false, icon: ''}
+  name: link_5
   layout_properties: {column: JVSRGA}
-  data_bindings:
-  - {code: 'self.item[''last_action_date''].strftime("%d %b, %Y %H:%M")', property: text}
-  name: label_2
-- type: Image
-  properties: {role: null, vertical_align: center, height: '25', tooltip: '', border: '',
-    foreground: '', visible: true, display_mode: shrink_to_fit, spacing_above: small,
-    source: '', spacing_below: small, background: '', horizontal_align: left}
-  name: image_3
-  layout_properties: {column: HIBOCD}
-  data_bindings:
-  - {property: source, code: 'self.item[''job_status''][''icon'']'}
-- type: Label
-  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: '', font_size: 14, font: '', spacing_above: small, icon_align: left, spacing_below: small,
+  event_bindings: {click: widecomment_click}
+  components:
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:On
+        Surface Variant', visible: true, text: '', font_size: 14, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    layout_properties: {column: JVSRGA, grid_position: 'YSBXYW,KNRDKC'}
+    data_bindings:
+    - {code: 'self.item[''last_action_date''].strftime("%d %b, %Y %H:%M")', property: text}
+    name: label_2
+- type: Link
+  properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+    visible: true, text: '', font_size: null, wrap_on: never, font: '', col_spacing: none,
+    spacing_above: none, icon_align: left, col_widths: '{}', spacing_below: none,
     italic: false, background: '', bold: false, underline: false, icon: ''}
+  name: link_3
   layout_properties: {column: FREDFV}
-  data_bindings:
-  - {code: 'self.item[''completion_code_description'']', property: text}
-  name: label_3
-- type: Label
-  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: '', font_size: 14, font: '', spacing_above: small, icon_align: left, spacing_below: small,
+  event_bindings: {click: widecomment_click}
+  components:
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:On
+        Surface Variant', visible: true, text: '', font_size: 14, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    layout_properties: {column: FREDFV, grid_position: 'HKMJLM,AWPQRE'}
+    data_bindings:
+    - {code: 'self.item[''completion_code_description'']', property: text}
+    name: label_3
+- type: Link
+  properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+    visible: true, text: '', font_size: null, wrap_on: never, font: '', col_spacing: none,
+    spacing_above: none, icon_align: left, col_widths: '{}', spacing_below: none,
     italic: false, background: '', bold: false, underline: false, icon: ''}
-  name: label_5
+  name: link_4
   layout_properties: {column: DCIFYE}
-  data_bindings:
-  - {property: text, code: 'self.item[''latest_assignee''][''name''] if self.item[''latest_assignee'']
-      else ''---'''}
+  event_bindings: {click: widecomment_click}
+  components:
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:On
+        Surface Variant', visible: true, text: '', font_size: 14, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: label_5
+    layout_properties: {column: DCIFYE, grid_position: 'VAVDCN,NSJFUV'}
+    data_bindings:
+    - {property: text, code: 'self.item[''latest_assignee''][''name''] if self.item[''latest_assignee'']
+        else ''---'''}
 - type: Link
   properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
     visible: true, text: '', font_size: null, wrap_on: never, font: '', col_spacing: medium,
@@ -70,14 +92,6 @@ components:
     name: image_2
     layout_properties: {grid_position: 'FNFUHH,KXTXNW'}
   event_bindings: {click: widecomment_click}
-- type: Image
-  properties: {role: null, vertical_align: center, height: '25', tooltip: '', border: '',
-    foreground: '', visible: true, display_mode: shrink_to_fit, spacing_above: small,
-    source: '', spacing_below: small, background: '', horizontal_align: left}
-  name: image_4
-  layout_properties: {column: MVQPXP}
-  data_bindings:
-  - {property: source, code: 'self.item[''latest_status''][''icon'']'}
 - type: CheckBox
   properties: {role: null, align: left, tooltip: Add to watchlist, border: '', enabled: true,
     foreground: '', allow_indeterminate: false, visible: false, text: '', font_size: 1,
@@ -108,7 +122,96 @@ components:
   event_bindings: {click: update_item2}
 - type: ColumnPanel
   properties: {role: tonal-card, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '', spacing_below: small,
-    background: ''}
+    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+    spacing_below: small, background: ''}
   name: outlined_card_1
   layout_properties: {column: null}
+  components: []
+- type: Link
+  properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+    visible: true, text: '', font_size: null, wrap_on: never, font: '', col_spacing: none,
+    spacing_above: none, icon_align: left, col_widths: '{}', spacing_below: none,
+    italic: false, background: '', bold: false, underline: false, icon: ''}
+  name: link_6
+  layout_properties: {column: HIBOCD}
+  event_bindings: {click: widecomment_click}
+  components:
+  - type: Image
+    properties: {role: null, vertical_align: center, height: '25', tooltip: '', border: '',
+      foreground: '', visible: true, display_mode: shrink_to_fit, spacing_above: small,
+      source: '', spacing_below: small, background: '', horizontal_align: left}
+    name: image_3
+    layout_properties: {column: HIBOCD, grid_position: 'JESPYP,LDOYYR'}
+    data_bindings:
+    - {property: source, code: 'self.item[''job_status''][''icon'']'}
+- type: Link
+  properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+    visible: true, text: '', font_size: null, wrap_on: never, font: '', col_spacing: none,
+    spacing_above: none, icon_align: left, col_widths: '{}', spacing_below: none,
+    italic: false, background: '', bold: false, underline: false, icon: ''}
+  name: link_7
+  layout_properties: {column: MVQPXP}
+  event_bindings: {click: widecomment_click}
+  components:
+  - type: Image
+    properties: {role: null, vertical_align: center, height: '25', tooltip: '', border: '',
+      foreground: '', visible: true, display_mode: shrink_to_fit, spacing_above: small,
+      source: '', spacing_below: small, background: '', horizontal_align: left}
+    name: image_4
+    layout_properties: {column: MVQPXP, grid_position: 'XCVOEP,QSKIAP'}
+    data_bindings:
+    - {property: source, code: 'self.item[''latest_status''][''icon'']'}
+- type: Link
+  properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+    visible: true, text: '', font_size: null, wrap_on: never, font: '', col_spacing: none,
+    spacing_above: none, icon_align: left, col_widths: '{}', spacing_below: none,
+    italic: false, background: '', bold: false, underline: false, icon: ''}
+  name: link_8
+  layout_properties: {column: DVFNNA}
+  event_bindings: {click: widecomment_click}
+  components:
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:On
+        Surface Variant', visible: true, text: '', font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: label_1
+    layout_properties: {grid_position: 'YLQSID,TSMOTP'}
+    data_bindings:
+    - {property: text, code: 'self.item[''job_reference'']'}
+- type: Link
+  properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+    visible: true, text: '', font_size: null, wrap_on: never, font: '', col_spacing: none,
+    spacing_above: none, icon_align: left, col_widths: '{}', spacing_below: none,
+    italic: false, background: '', bold: false, underline: false, icon: ''}
+  name: link_9
+  layout_properties: {column: RCINSG}
+  event_bindings: {click: widecomment_click}
+  components:
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:On
+        Surface Variant', visible: true, text: '', font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: label_4
+    layout_properties: {grid_position: 'TAFSDH,KJKFNC'}
+    data_bindings:
+    - {property: text, code: 'self.item[''sub_brand'']'}
+- type: Link
+  properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+    visible: true, text: '', font_size: null, wrap_on: never, font: '', col_spacing: none,
+    spacing_above: none, icon_align: left, col_widths: '{}', spacing_below: none,
+    italic: false, background: '', bold: false, underline: false, icon: ''}
+  name: link_10
+  layout_properties: {column: XLQKDN}
+  event_bindings: {click: widecomment_click}
+  components:
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:On
+        Surface Variant', visible: true, text: '', font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: label_6
+    layout_properties: {grid_position: 'SAOQST,YHZPVW'}
+    data_bindings:
+    - {property: text, code: 'self.item[''customer_name'']'}
