--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -397,6 +397,14 @@ components:
         underline: false, icon: ''}
       layout_properties: {row: YQKNAU, width_xs: 2, col_xs: 7, width: 60.4375}
       name: label_3_copy
+    - type: Button
+      properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
+        foreground: '', visible: true, text: cms, font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
+      name: cms
+      layout_properties: {row: YQKNAU, width_xs: 2, col_xs: 9, width: 125.656}
+      event_bindings: {click: cms_click}
 - type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
     wrap_on: never, col_spacing: none, spacing_above: none, col_widths: '{}', spacing_below: none,
