--- a/client_code/CMS/RowTemplate4/form_template.yaml
+++ b/client_code/CMS/RowTemplate4/form_template.yaml
@@ -8,8 +8,8 @@ components:
   name: text_box_1
   layout_properties: {column: MPJISQ}
   data_bindings:
-  - {property: text, code: 'self.item[''token'']', writeback: true}
-  event_bindings: {lost_focus: update_cms, pressed_enter: update_cms}
+  - {property: text, code: 'self.item[''token'']', writeback: false}
+  event_bindings: {lost_focus: update_cms, pressed_enter: update_cms, change: update_cms}
 - type: TextBox
   properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: '',
     border: none, enabled: true, foreground: 'theme:Font', visible: true, text: '',
@@ -18,8 +18,8 @@ components:
   name: text_box_2
   layout_properties: {column: ECSLIN}
   data_bindings:
-  - {property: text, code: 'self.item[''name'']', writeback: true}
-  event_bindings: {lost_focus: update_cms, pressed_enter: update_cms}
+  - {property: text, code: 'self.item[''name'']', writeback: false}
+  event_bindings: {lost_focus: update_cms, pressed_enter: update_cms, change: update_cms}
 - type: TextBox
   properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: '',
     border: none, enabled: true, foreground: 'theme:Font', visible: true, text: '',
@@ -28,8 +28,8 @@ components:
   name: text_box_3
   layout_properties: {column: FSNUKJ}
   data_bindings:
-  - {property: text, code: 'self.item[''server'']', writeback: true}
-  event_bindings: {pressed_enter: update_cms, lost_focus: update_cms}
+  - {property: text, code: 'self.item[''server'']', writeback: false}
+  event_bindings: {pressed_enter: update_cms, lost_focus: update_cms, change: update_cms}
 - type: TextBox
   properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: '',
     border: none, enabled: true, foreground: 'theme:Font', visible: true, text: '',
@@ -38,8 +38,8 @@ components:
   name: text_box_4
   layout_properties: {column: PDPAQZ}
   data_bindings:
-  - {property: text, code: 'self.item[''merchant_id'']', writeback: true}
-  event_bindings: {pressed_enter: update_cms, lost_focus: update_cms}
+  - {property: text, code: 'self.item[''merchant_id'']', writeback: false}
+  event_bindings: {pressed_enter: update_cms, lost_focus: update_cms, change: update_cms}
 - type: TextBox
   properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: '',
     border: none, enabled: true, foreground: 'theme:Font', visible: true, text: '',
@@ -48,26 +48,32 @@ components:
   name: text_box_7
   layout_properties: {column: DNDWUT}
   data_bindings:
-  - {property: text, code: 'self.item[''rating_threshold'']', writeback: true}
-  event_bindings: {pressed_enter: update_cms, lost_focus: update_cms}
+  - {property: text, code: 'self.item[''rating_threshold'']', writeback: false}
+  event_bindings: {pressed_enter: update_cms, lost_focus: update_cms, change: update_cms}
 - type: CheckBox
   properties: {role: null, align: left, tooltip: '', border: '', enabled: true, foreground: 'theme:Font',
     allow_indeterminate: false, visible: true, text: '', font_size: null, font: '',
-    spacing_above: small, spacing_below: small, italic: false, background: '', bold: false,
+    spacing_above: none, spacing_below: small, italic: false, background: '', bold: false,
     checked: false, underline: false}
   name: check_box_1
   layout_properties: {column: MBQKBP}
   data_bindings:
-  - {property: checked, code: 'self.item[''completion_code_enabled'']', writeback: true}
+  - {property: checked, code: 'self.item[''completion_code_enabled'']', writeback: false}
   event_bindings: {change: update_cms}
 - type: CheckBox
   properties: {role: null, align: left, tooltip: '', border: '', enabled: true, foreground: 'theme:Font',
     allow_indeterminate: false, visible: true, text: '', font_size: null, font: '',
-    spacing_above: small, spacing_below: small, italic: false, background: '', bold: false,
+    spacing_above: none, spacing_below: small, italic: false, background: '', bold: false,
     checked: false, underline: false}
   name: check_box_2
   layout_properties: {column: VHZCVW}
   data_bindings:
-  - {property: checked, code: 'self.item[''low_rating_enabled'']', writeback: true}
+  - {property: checked, code: 'self.item[''low_rating_enabled'']', writeback: false}
   event_bindings: {change: update_cms}
+- type: ColumnPanel
+  properties: {role: tonal-card, tooltip: '', border: '', foreground: '', visible: true,
+    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '', spacing_below: small,
+    background: ''}
+  name: column_panel_1
+  layout_properties: {column: null}
 is_package: true
