--- a/client_code/CMS/form_template.yaml
+++ b/client_code/CMS/form_template.yaml
@@ -16,10 +16,10 @@ components:
     layout_properties: {grid_position: 'EJCGIQ,WYODWH'}
     components:
     - type: Button
-      properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
-        foreground: '', visible: true, text: Dashboard, font_size: null, font: '',
-        spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-        background: '', bold: false, underline: false, icon: ''}
+      properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
+        foreground: '', visible: true, text: back, font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: 'fa:angle-left'}
       name: Dashboard
       layout_properties: {grid_position: 'HNIQTX,LXRVGT'}
       event_bindings: {click: Dashboard_click}
