Edited Homepage and Homepage.RowTemplate1

--- a/client_code/Homepage/RowTemplate1/form_template.yaml
+++ b/client_code/Homepage/RowTemplate1/form_template.yaml
@@ -36,7 +36,9 @@ components:
       icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
       underline: false, icon: ''}
     layout_properties: {column: JVSRGA, grid_position: 'YSBXYW,KNRDKC'}
-    data_bindings: []
+    data_bindings:
+    - {property: text, code: 'self.item[''last_action_date''].strftime("%d %b, %Y
+        %H:%M")'}
     name: label_2
 - type: Link
   properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
