--- a/client_code/CMS/RowTemplate4/form_template.yaml
+++ b/client_code/CMS/RowTemplate4/form_template.yaml
@@ -1,7 +1,7 @@
 container: {type: DataRowPanel}
 components:
 - type: TextBox
-  properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: '',
+  properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: '',
     border: none, enabled: true, foreground: 'theme:Font', visible: true, text: '',
     font_size: null, font: '', spacing_above: small, type: text, spacing_below: small,
     italic: false, background: '', bold: false, underline: false}
@@ -9,31 +9,31 @@ components:
   layout_properties: {column: MPJISQ}
   data_bindings:
   - {property: text, code: 'self.item[''token'']', writeback: false}
-  event_bindings: {lost_focus: update_cms, pressed_enter: update_cms, change: update_cms}
+  event_bindings: {pressed_enter: update_cms, change: update_cms}
 - type: TextBox
-  properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: '',
+  properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: '',
     border: none, enabled: true, foreground: 'theme:Font', visible: true, text: '',
-    font_size: null, font: '', spacing_above: small, type: text, spacing_below: small,
+    font_size: 13, font: '', spacing_above: small, type: text, spacing_below: small,
     italic: false, background: '', bold: false, underline: false}
   name: text_box_2
   layout_properties: {column: ECSLIN}
   data_bindings:
   - {property: text, code: 'self.item[''name'']', writeback: false}
-  event_bindings: {lost_focus: update_cms, pressed_enter: update_cms, change: update_cms}
+  event_bindings: {pressed_enter: update_cms, change: update_cms}
 - type: TextBox
-  properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: '',
+  properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: '',
     border: none, enabled: true, foreground: 'theme:Font', visible: true, text: '',
-    font_size: null, font: '', spacing_above: small, type: text, spacing_below: small,
+    font_size: 13, font: '', spacing_above: small, type: text, spacing_below: small,
     italic: false, background: '', bold: false, underline: false}
   name: text_box_3
   layout_properties: {column: FSNUKJ}
   data_bindings:
   - {property: text, code: 'self.item[''server'']', writeback: false}
-  event_bindings: {pressed_enter: update_cms, lost_focus: update_cms, change: update_cms}
+  event_bindings: {pressed_enter: update_cms, change: update_cms}
 - type: TextBox
-  properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: '',
+  properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: '',
     border: none, enabled: true, foreground: 'theme:Font', visible: true, text: '',
-    font_size: null, font: '', spacing_above: small, type: text, spacing_below: small,
+    font_size: 13, font: '', spacing_above: small, type: text, spacing_below: small,
     italic: false, background: '', bold: false, underline: false}
   name: text_box_4
   layout_properties: {column: PDPAQZ}
@@ -41,7 +41,7 @@ components:
   - {property: text, code: 'self.item[''merchant_id'']', writeback: false}
   event_bindings: {pressed_enter: update_cms, lost_focus: update_cms, change: update_cms}
 - type: TextBox
-  properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: '',
+  properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: '',
     border: none, enabled: true, foreground: 'theme:Font', visible: true, text: '',
     font_size: null, font: '', spacing_above: small, type: number, spacing_below: small,
     italic: false, background: '', bold: false, underline: false}
@@ -49,7 +49,7 @@ components:
   layout_properties: {column: DNDWUT}
   data_bindings:
   - {property: text, code: 'self.item[''rating_threshold'']', writeback: false}
-  event_bindings: {pressed_enter: update_cms, lost_focus: update_cms, change: update_cms}
+  event_bindings: {pressed_enter: update_cms, change: update_cms}
 - type: CheckBox
   properties: {role: null, align: left, tooltip: '', border: '', enabled: true, foreground: 'theme:Font',
     allow_indeterminate: false, visible: true, text: '', font_size: null, font: '',
