--- a/client_code/CMS/form_template.yaml
+++ b/client_code/CMS/form_template.yaml
@@ -10,18 +10,28 @@ components:
   name: content_panel
   layout_properties: {slot: default}
   components:
-  - type: ColumnPanel
-    properties: {col_widths: '{}'}
-    name: column_panel_1
-    layout_properties: {grid_position: 'EJCGIQ,WYODWH'}
+  - type: XYPanel
+    properties: {role: null, width: null, align: center, height: 20, tooltip: '',
+      border: '', foreground: '', visible: true, spacing_above: small, spacing_below: medium,
+      background: ''}
+    name: xy_panel_1
+    layout_properties: {grid_position: 'LQWXWB,FJNGZG'}
     components:
+    - type: Label
+      properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
+        visible: true, text: Merchant Portal set up, font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: none, italic: false, background: '', bold: true,
+        underline: false, icon: ''}
+      name: label_1
+      layout_properties: {grid_position: 'HNIQTX,ZWSVKL', x: 0, y: 2.1562000000000126,
+        width: 742.672}
     - type: Button
       properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
         foreground: '', visible: true, text: back, font_size: null, font: '', spacing_above: small,
         icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
         underline: false, icon: 'fa:angle-left'}
       name: Dashboard
-      layout_properties: {grid_position: 'HNIQTX,LXRVGT'}
+      layout_properties: {grid_position: 'HNIQTX,LXRVGT', x: 0, y: 5, width: 96}
       event_bindings: {click: Dashboard_click}
   - type: GridPanel
     properties: {spacing_above: none, spacing_below: none, background: '', foreground: '',
@@ -35,7 +45,7 @@ components:
         columns:
         - {id: ECSLIN, title: Merchant name, data_key: name, $$hashKey: 'object:6799',
           width: '140', expand: false}
-        - {id: MPJISQ, title: Token, data_key: token, $$hashKey: 'object:6800', width: 202,
+        - {id: MPJISQ, title: Token, data_key: token, $$hashKey: 'object:6800', width: 217,
           expand: false}
         - {id: FSNUKJ, title: Server, data_key: server, $$hashKey: 'object:6801',
           width: 85, expand: false}
@@ -46,7 +56,7 @@ components:
         - {id: VHZCVW, title: Low Rating, data_key: low_rating_enabled, $$hashKey: 'object:6873',
           width: 90, expand: false}
         - {id: DNDWUT, title: Low Rating Threshold, data_key: rating_threshold, $$hashKey: 'object:6875',
-          width: 88, expand: false}
+          width: 97, expand: false}
         auto_header: true
         tooltip: ''
         border: ''
