Edited Modal_wide and Homepage.RowTemplate1

--- a/client_code/Modal_wide/form_template.yaml
+++ b/client_code/Modal_wide/form_template.yaml
@@ -60,8 +60,8 @@ components:
     - type: Label
       properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
         visible: true, text: '', font_size: 14, font: '', spacing_above: none, icon_align: left,
-        spacing_below: none, italic: false, background: '', bold: false, underline: false,
-        icon: ''}
+        spacing_below: none, italic: false, background: 'theme:Error', bold: false,
+        underline: false, icon: ''}
       name: label_12
       layout_properties: {row: GKXDTS, width_xs: 2, col_xs: 7, width: 99.9844}
       data_bindings:
@@ -74,14 +74,15 @@ components:
         underline: false, icon: ''}
       name: label_5
       layout_properties: {row: JKJKTK, width_xs: 2, col_xs: 0, width: 115.656}
-    - type: Image
-      properties: {role: null, vertical_align: center, height: '25', tooltip: '',
-        border: '', foreground: '', visible: true, display_mode: shrink_to_fit, spacing_above: none,
-        source: '', spacing_below: none, background: '', horizontal_align: left}
-      name: image_3
-      layout_properties: {row: JKJKTK, width_xs: 2, col_xs: 2, width: 115.656}
+    - type: Label
+      properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+        visible: true, text: '', font_size: 14, font: '', spacing_above: small, icon_align: left,
+        spacing_below: small, italic: false, background: '', bold: false, underline: false,
+        icon: ''}
+      name: label_22
+      layout_properties: {row: JKJKTK, width_xs: 2, col_xs: 2, width: 99.9844}
       data_bindings:
-      - {property: source, code: 'self.item[''job_status''][''icon'']'}
+      - {property: text, code: 'self.item[''job_status''][''name'']'}
     - type: Label
       properties: {role: null, align: right, tooltip: '', border: '', foreground: 'theme:Filter
           Font', visible: true, text: 'Escalation Status :', font_size: 14, font: '',
