--- a/client_code/Homepage/RowTemplate1/form_template.yaml
+++ b/client_code/Homepage/RowTemplate1/form_template.yaml
@@ -137,14 +137,15 @@ components:
   layout_properties: {column: HIBOCD}
   event_bindings: {click: widecomment_click}
   components:
-  - type: Image
-    properties: {role: null, vertical_align: center, height: '25', tooltip: '', border: '',
-      foreground: '', visible: true, display_mode: shrink_to_fit, spacing_above: small,
-      source: '', spacing_below: small, background: '', horizontal_align: left}
-    name: image_3
-    layout_properties: {column: HIBOCD, grid_position: 'JESPYP,LDOYYR'}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:On
+        Surface Variant', visible: true, text: '', font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: label_7
+    layout_properties: {grid_position: 'JEPZZA,IMQOKO'}
     data_bindings:
-    - {property: source, code: 'self.item[''job_status''][''icon'']'}
+    - {property: text, code: 'self.item[''job_status''][''name'']'}
 - type: Link
   properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
     visible: true, text: '', font_size: null, wrap_on: never, font: '', col_spacing: none,
