--- a/client_code/Homepage/RowTemplate1/form_template.yaml
+++ b/client_code/Homepage/RowTemplate1/form_template.yaml
@@ -145,7 +145,7 @@ components:
     name: label_7
     layout_properties: {grid_position: 'JEPZZA,IMQOKO'}
     data_bindings:
-    - {property: text, code: 'self.item[''job_status''][''name'']'}
+    - {property: text, code: 'self.item[''webhook_merchant_link''][''name'']'}
 - type: Link
   properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
     visible: true, text: '', font_size: null, wrap_on: never, font: '', col_spacing: none,
