--- a/anvil.yaml
+++ b/anvil.yaml
@@ -8,7 +8,7 @@ services:
   client_config: {enable_v2: true}
   server_config: {auto_create_missing_columns: true}
 - source: /runtime/services/anvil/users.yml
-  client_config: {use_microsoft: true, require_secure_passwords: true, use_saml: false,
+  client_config: {use_microsoft: false, require_secure_passwords: true, use_saml: false,
     use_email: true, allow_remember_me: true, allow_signup: false, enable_automatically: true,
     confirm_email: true, remember_me_days: 30, use_google: true}
   server_config:
