--- a/client_code/CMS/RowTemplate4/form_template.yaml
+++ b/client_code/CMS/RowTemplate4/form_template.yaml
@@ -5,41 +5,11 @@ components:
     border: none, enabled: true, foreground: 'theme:Font', visible: true, text: '',
     font_size: 13, font: '', spacing_above: small, type: text, spacing_below: small,
     italic: false, background: '', bold: false, underline: false}
-  name: text_box_1
-  layout_properties: {column: MPJISQ}
-  data_bindings:
-  - {property: text, code: 'self.item[''token'']', writeback: false}
-  event_bindings: {pressed_enter: update_cms, change: update_cms}
-- type: TextBox
-  properties: {role: cms, align: left, hide_text: false, tooltip: '', placeholder: '',
-    border: none, enabled: true, foreground: 'theme:Font', visible: true, text: '',
-    font_size: 13, font: '', spacing_above: small, type: text, spacing_below: small,
-    italic: false, background: '', bold: false, underline: false}
   name: text_box_2
   layout_properties: {column: ECSLIN}
   data_bindings:
   - {property: text, code: 'self.item[''name'']', writeback: false}
   event_bindings: {pressed_enter: update_cms, change: update_cms}
-- type: TextBox
-  properties: {role: cms, align: left, hide_text: false, tooltip: '', placeholder: '',
-    border: none, enabled: true, foreground: 'theme:Font', visible: true, text: '',
-    font_size: 13, font: '', spacing_above: small, type: text, spacing_below: small,
-    italic: false, background: '', bold: false, underline: false}
-  name: text_box_3
-  layout_properties: {column: FSNUKJ}
-  data_bindings:
-  - {property: text, code: 'self.item[''server'']', writeback: false}
-  event_bindings: {pressed_enter: update_cms, change: update_cms}
-- type: TextBox
-  properties: {role: cms, align: left, hide_text: false, tooltip: '', placeholder: '',
-    border: none, enabled: true, foreground: 'theme:Font', visible: true, text: '',
-    font_size: 13, font: '', spacing_above: small, type: text, spacing_below: small,
-    italic: false, background: '', bold: false, underline: false}
-  name: text_box_4
-  layout_properties: {column: PDPAQZ}
-  data_bindings:
-  - {property: text, code: 'self.item[''merchant_id'']', writeback: false}
-  event_bindings: {pressed_enter: update_cms, lost_focus: update_cms, change: update_cms}
 - type: TextBox
   properties: {role: cms, align: left, hide_text: false, tooltip: '', placeholder: '',
     border: none, enabled: true, foreground: 'theme:Font', visible: true, text: '',
@@ -76,4 +46,14 @@ components:
     background: ''}
   name: column_panel_1
   layout_properties: {column: null}
+- type: CheckBox
+  properties: {role: null, align: left, tooltip: '', border: '', enabled: true, foreground: '',
+    allow_indeterminate: false, visible: true, text: '', font_size: null, font: '',
+    spacing_above: none, spacing_below: small, italic: false, background: '', bold: false,
+    checked: false, underline: false}
+  name: check_box_3
+  layout_properties: {column: YZDWXM}
+  data_bindings:
+  - {property: checked, code: 'self.item[''fail_code_enabled'']', writeback: false}
+  event_bindings: {change: update_cms}
 is_package: true
