--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -467,6 +467,13 @@ components:
             Font', visible: true, text: '', font_size: 12, font: '', spacing_above: small,
           icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
           underline: false, icon: ''}
+        name: label_4
+        layout_properties: {}
+      - type: Label
+        properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:Filter
+            Font', visible: true, text: '', font_size: 12, font: '', spacing_above: small,
+          icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+          underline: false, icon: ''}
         name: label_1
         layout_properties: {slot: footer, row: YZGRYJ, width_xs: 9, col_xs: 0}
         data_bindings: []
