--- a/anvil.yaml
+++ b/anvil.yaml
@@ -34,12 +34,12 @@ services:
   client_config: {}
   server_config: {}
 startup: {type: form, module: Homepage}
-package_name: React
+package_name: React_DEV
 allow_embedding: false
-name: React
+name: React DEV
 runtime_options: {version: 2, client_version: '3', server_version: python3-full, server_spec: null,
   server_persist: true}
-metadata: {logo_img: 'asset:RadaroLogo_CircleBlackLow-noBG-logo.png', title: React}
+metadata: {logo_img: 'asset:RadaroLogo_CircleBlackLow-noBG-logo.png', title: React DEV}
 startup_form: null
 db_schema:
   escalation_status:
