--- a/client_code/Reporting/form_template.yaml
+++ b/client_code/Reporting/form_template.yaml
@@ -22,7 +22,7 @@ components:
     name: label_1
     layout_properties: {grid_position: 'ACOOIT,ITNQQZ', full_width_row: true}
   - type: Plot
-    properties: {spacing_above: small, spacing_below: small, height: 320, visible: true,
+    properties: {spacing_above: small, spacing_below: small, height: '450', visible: true,
       tooltip: '', interactive: false}
     name: plot_1
     layout_properties: {grid_position: 'LSDZFT,UVTSCZ'}
