--- a/client_code/Reporting/form_template.yaml
+++ b/client_code/Reporting/form_template.yaml
@@ -23,10 +23,18 @@ components:
     layout_properties: {grid_position: 'ACOOIT,ITNQQZ', full_width_row: true}
   - type: Plot
     properties: {spacing_above: small, spacing_below: small, height: '450', visible: true,
-      tooltip: '', interactive: false}
+      tooltip: '', interactive: true}
     name: plot_1
     layout_properties: {grid_position: 'LSDZFT,UVTSCZ'}
     event_bindings: {}
+  - type: Plot
+    properties: {}
+    name: plot_2
+    layout_properties: {grid_position: 'DNSKBA,YZESWF'}
+  - type: Plot
+    properties: {}
+    name: plot_3
+    layout_properties: {grid_position: 'WSYCPI,ACITTJ'}
 - type: FlowPanel
   properties: {role: null, spacing: none, align: center, tooltip: '', border: '',
     foreground: '', visible: true, spacing_above: none, spacing_below: none, background: ''}
