--- a/client_code/Reporting/form_template.yaml
+++ b/client_code/Reporting/form_template.yaml
@@ -5,8 +5,8 @@ container:
 components:
 - type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: never, col_spacing: medium, spacing_above: none, col_widths: '{"ITNQQZ":30}',
-    spacing_below: none, background: ''}
+    wrap_on: never, col_spacing: medium, spacing_above: none, col_widths: '{}', spacing_below: none,
+    background: ''}
   name: panel
   layout_properties: {slot: default}
   components:
@@ -14,13 +14,15 @@ components:
     properties: {height: 1, width: 804.4688}
     name: xy_panel_1
     layout_properties: {grid_position: 'IIAVUP,ZEFVUU'}
-  - type: Label
-    properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
-      visible: true, text: Tickets by Escalation Type, font_size: null, font: '',
-      spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-      background: '', bold: false, underline: false, icon: ''}
-    name: label_1
-    layout_properties: {grid_position: 'ACOOIT,ITNQQZ', full_width_row: true}
+    components:
+    - type: Button
+      properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
+        foreground: '', visible: true, text: back, font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: 'fa:angle-left'}
+      name: Dashboard
+      layout_properties: {grid_position: 'HNIQTX,LXRVGT', x: 0, y: -10, width: 96}
+      event_bindings: {click: Dashboard_click}
   - type: Plot
     properties: {spacing_above: small, spacing_below: small, height: '450', visible: true,
       tooltip: '', interactive: true}
